# arx-tools

./: .gitignore  README.md  pyproject.toml  setup.py
arx_tools/: __init__.py  check_v3.py  download_ncbi_genome.py  genbank_to_fasta.py  import_genome.py  import_orthofinder.py  init_folder_structure.py  init_orthofinder.py  reindex_assembly.py  rename_custom_annotations.py  rename_eggnog.py  rename_fasta.py  rename_genbank.py  rename_gff.py  update_folder_structure.py  utils.py
arx_tools/data/: annotations.json
tests/: helpers.py  test_apply_maps.py  test_check_v3.py  test_real_genome_formats.py  test_rename_custom_annotations.py  test_rename_eggnog.py  test_rename_fasta.py  test_rename_genbank.py  test_rename_gff.py  test_update_folder_structure.py  test_upgrade_workflow.py
